--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Jogos</title>
 </head>
 <body>
-    
+<div class="caixa-principal">
+    <h1>Jogos</h1>
+    <div class="caixa-pergunta"></div>
+    <div class="caixa-alternativa"></div>
+    <div class="caixa-resultado">
+        <p class="texto-resultado"></p>
+    </div>
+</div>
 
 <script src="script.js"></script>
 </body>
